[vr] Change tree ordering of exit prompt vs exit prompt backplane

With this change, the exit prompt becomes a descendant of the backplane.
The result is that hit testing will again consider the exit prompt "in
front" making the UI usable again.

Bug: 782441
Change-Id: I6294a5b12d00ada006d0ff65c0e5e963b6809cac
Reviewed-on: https://chromium-review.googlesource.com/757588
Reviewed-by: Amirhossein Simjour <asimjour@chromium.org>
Commit-Queue: Ian Vollick <vollick@chromium.org>
Cr-Commit-Position: refs/heads/master@{#514849}
Former-commit-id: 1dd196517b6d70de2e5bf0fca5cac4134ad67a47